# gnupdf

./: .bzrignore  .cvsignore  .x-sc_avoid_if_before_free  .x-sc_bindtextdomain  .x-sc_cast_of_alloc_return_value  .x-sc_makefile_at_at_check  .x-sc_program_name  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_prohibit_magic_number_exit  .x-sc_prohibit_stddef_without_use  .x-sc_space_tab  .x-sc_texinfo_acronym  .x-sc_useless_cpp_parens  AUTHORS  ChangeLog  DEPENDENCIES  MANIFEST.wiki  Makefile.am  NEWS  README  README-dev  README.bzr  README.cvs  bootstrap  cfg.mk  configure.ac  libgnupdf.pc.in  maint.mk
doc/: .cvsignore  A85_Calculation_Spreadsheet.ods  MANIFEST.wiki  Makefile.am  fdl.texi  gendocs_template  generate-tsd.pl.in  gnupdf-arch.texi  gnupdf-hg.texi  gnupdf-manual-wiki.init  gnupdf-manual.init  gnupdf-tsd.texi  gnupdf-utils.texi  gnupdf.texi  gnupdf_util.texi  manuals.css  pdf-filter.1  pdf-tokeniser.1  pdf_filter.1
doc/figures/: MANIFEST.wiki  base-layer-architecture.eps  base-layer-architecture.fig  calendar-time-span.eps  calendar-time-span.fig  calendar-time.eps  calendar-time.fig  filesystem-interfaces.eps  filesystem-open-files.eps  filesystem-several-devices.eps  layer-development-procedure.eps  layer-development-procedure.fig  lib-development-procedure.fig  library-architecture.eps  library-architecture.fig  library-architecture.txt  module-development-procedure.eps  object-layer-architecture.eps  object-layer-architecture.fig  object-layer-architecture.txt  object-pool.txt  object-storage.eps  object-storage.txt  parser-data-flow.txt  stream-context.eps  stream-context.fig  stream-disk-storage.txt  stream-filtering-support.eps  stream-filtering-support.fig  stream-memory-buffer.eps  stream-read-write-pointer.fig  stream-write.eps  stream-write.fig  streams-operating-file.eps  tasks-pool.eps  tasks-pool.fig  text-variable.eps  text-variable.fig  times-and-time-spans.eps  unit-testing-sources.fig
doc/gnupdf-arch-figures/: base-layer-architecture.eps  calendar-time-span.eps  dctdec-nfa.eps  dctdec-nfa.fig  er-paths-files-filesystems.eps  er-paths-files-filesystems.fig  filesystem-interfaces.fig  filesystem-open-files.fig  filesystem-several-devices.fig  object-document-architecture.eps  object-document-architecture.txt  object-layer-architecture.eps  object-layer-architecture.txt  parser-data-flow.eps  parser-data-flow.txt  parser-overview.eps  parser-overview.txt  pdf-fsys-http.eps  pdf-fsys-http.fig  stream-filter.eps  stream-filter.fig  stream-memory-buffer.fig  stream-read-write-pointer.eps  stream-read.eps  stream-read.fig  stream-value-internals.eps  stream-value-internals.txt  streams-operating-file.fig  times-and-time-spans.fig
doc/gnupdf-figures/: acquire-counters.eps  acquire-counters.txt  object-hierarchy.eps  object-hierarchy.txt
doc/gnupdf-hg-figures/: lib-development-procedure.eps  module-development-procedure.fig  tasks-workflow.eps  tasks-workflow.fig  test-types.eps  test-types.fig  unit-testing-architecture.eps  unit-testing-architecture.fig  unit-testing-sources.eps
prmgt/: MANIFEST.wiki  Makefile.am  apic2html.in  apic2wiki.in  authors.el  check-api-doc-consistency.pl  check-api-doc-consistency.pl.in  docfuncs.in  fly2org  fly2rec  generate-coverage-report  get-test-data.sh.in  libgnupdf.tjp  patch_safety_dispatcher.py  pmccabe.css  pmccabe2html  pmccabe2html.in  srcinfo-extractor.pl  srcinfo-extractor.pl.in  testlog2html.in  testlog2wiki.in  tsdfuncs.in
src/: MANIFEST.wiki  Makefile  Makefile.am  README  extract-public-hdr.in  header-autogen  pdf-config.h.in  pdf-global.c  pdf-global.h  pdf.c  pdf.h  pdf_base.c  pdf_base.h  pdf_date.c  pdf_date.h  pdf_function.c  pdf_function.h  pdf_io.c  pdf_io.h  pdf_obj.c  pdf_obj.h  pdf_rectangle.c  pdf_rectangle.h  pdf_stm.c  pdf_stm.h  pdf_stm_f_a85.c  pdf_stm_f_a85.h  pdf_stm_f_ahdec.c  pdf_stm_f_ahdec.h  pdf_stm_f_ahex.c  pdf_stm_f_ahex.h  pdf_stm_f_fax.c  pdf_stm_f_fax.h  pdf_stm_f_fdec.c  pdf_stm_f_fdec.h  pdf_stm_f_flate.c  pdf_stm_f_flate.h  pdf_stm_f_lzw.c  pdf_stm_f_lzw.h  pdf_stm_f_null.c  (+11 more)
src/base/: MANIFEST.wiki  pdf-alloc.c  pdf-alloc.h  pdf-base.c  pdf-base.h  pdf-crypt-c-aesv2.c  pdf-crypt-c-aesv2.h  pdf-crypt-c-v2.c  pdf-crypt-c-v2.h  pdf-crypt-md-md5.c  pdf-crypt-md-md5.h  pdf-crypt.c  pdf-crypt.h  pdf-error.c  pdf-error.h  pdf-fp-func.c  pdf-fp-func.h  pdf-fp.c  pdf-fp.h  pdf-fsys-def.h  pdf-fsys-disk.c  pdf-fsys-disk.h  pdf-fsys-http.c  pdf-fsys-http.h  pdf-fsys.c  pdf-fsys.h  pdf-hash-helper.c  pdf-hash-helper.h  pdf-hash.c  pdf-hash.h  pdf-list.c  pdf-list.h  pdf-stm-be-cfile.c  pdf-stm-be-cfile.h  pdf-stm-be-file.c  pdf-stm-be-file.h  pdf-stm-be-mem.c  pdf-stm-be-mem.h  pdf-stm-be.c  pdf-stm-be.h  (+82 more)
src/document/: MANIFEST.wiki  pdf-date.c  pdf-date.h  pdf-function.c  pdf-function.h  pdf-rectangle.c  pdf-rectangle.h
src/object/: MANIFEST.wiki  pdf-obj.c  pdf-obj.h  pdf-object.h  pdf-rd-parser.c  pdf-rd-parser.h  pdf-rd-tokeniser.c  pdf-rd-tokeniser.h
torture/: MANIFEST.wiki  Makefile.am  README  generate-testall  generate_testall  test-base.c  test-date.c  test-io_openclose.c  test-io_readwrite.c  test-io_seek.c  test-libinit.c  test-obj_array.c  test-obj_createdestroy.c  test-obj_dict.c  test-obj_dupequality.c  test-rectangle.c  test-stm-module.c  test-stm_openclose.c  test_stm_module.c  testall.c  torture-file-1
torture/testdata/: Makefile.am  README  TD00001  TD00001.desc  TD00002  TD00002.desc  TD00003  TD00003.desc  TD00004.desc  TD00005.desc
torture/tortutils/: tortutils.c  tortutils.h
torture/unit/: Makefile.am  pdf-stm-f-a85-tests.sh  pdf-test-common.c  pdf-test-common.h  runtests.c  runtests.sh
torture/unit/base/alloc/: pdf-alloc.c  pdf-dealloc.c  pdf-realloc.c  tsuite-alloc.c
torture/unit/base/crypt/: pdf-crypt-cipher-decrypt-size.c  pdf-crypt-cipher-decrypt.c  (+14 more)
torture/unit/nocheck/: README  check.c  check.h
utils/: MANIFEST.wiki  Makefile.am  README  parsetest.c  pdf-filereader.c  pdf-filereader.h  pdf-filter.c  pdf-filter.h  pdf-text-generate-ucd.c  pdf-tokeniser.c  pdf-tokeniser.h  pdf-utils.h  pdf_filter.c  pdf_filter.h  printobj.c  toktest.c
(+243 files in other folders)
